VZDEV/src/objects/CCPM_RERecord__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_RE_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>RE Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_primaryObject__c</fullName>
        <label>Primary Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_recordNameUnique__c</fullName>
        <inlineHelpText>This field is to make sure the Name is Unique. This field is filled in by a workflow with the Name of the Record.</inlineHelpText>
        <label>Record Name Unique</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>RE Record</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RE Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>